@@ -1,3 +1,8 @@
+2015-03-31 Riccardo Mottola <rm@gnu.org>
+
+	* GRDocView.m
+	Save also Image objects by encoding them
+
 2015-03-24 Riccardo Mottola <rm@gnu.org>
 
 	* GRImageEditor.h
